L4 spacing fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/sectionMenu/_sectionMenu.scss
@@ -6,5 +6,19 @@
         &.active {
             font-weight: 900;
         }
+        i.with-arrow {
+            @include margin-left($margin-xs);
+            vertical-align: top;
+            &::before {
+                font-size: $font-sm;
+                line-height: $font-sm;
+                transform: rotate(90deg);
+            }
+        }
+        i.with-arrow.icon-up {
+            &::before {
+                transform: rotate(270deg);
+            }
+        }
     }
 }
